assignment-helm/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignment-server
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: assignment-server
          image: 
          ports:
            - containerPort: 8000
