assignment-helm/templates/service.yaml
kind: Service 
apiVersion: v1

metadata:
  name: assignment-service

spec:
  type: NodePort
  selector:
    app: assignment-hostname
  ports:
    - nodePort: 30163
      port: 8080
      targetPort: 8000
